--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,27 +1,61 @@
-name: Deploy
+version: 2.1
 
-on:
-    push:
-      branches: [main]
-    pull_request:
-      branches:
-        - main
-       
+orbs:
+  cypress: cypress-io/cypress@3.3.1
+
 jobs:
-    ci:
-      runs-on: ubuntu-latest
-      steps:
-        - uses: actions/checkout@v3
+  start-server:
+        docker:
+          - image: cypress/base:latest
+        steps:
+          - checkout
+          - run:
+              name: Install dependencies
+              command: npm install
+          - run:
+              name: Build the app
+              command: npm run build
+  deploy-to-render-staging:
+    docker:
+      - image: cimg/base:current
+    steps:
+      - run:
+          name: Deploy to Render Staging
+          command: |
+            echo "Deploying to Render Staging"
+            curl $RENDER_STAGING_DEPLOYHOOK
+  deploy-to-render-production:
+    docker:
+      - image: cimg/base:current
+    steps:
+      - run:
+          name: Deploy to Render Production
+          command: |
+            echo "Deploying to Render production"
+            curl $RENDER_PRODUCTION_DEPLOYHOOK
 
-        - name: Test
-          run: |
-            npm install
-            npm run test
-
-        - name: Deploy
-          if: github.ref == 'refs/heads/main'
-          env:
-            DEPLOY_URL: ${{ secrets.RENDER_DEPLOY_HOOK_URL }}
-          run: |
-            curl "$DEPLOY_URL"
-  
+workflows:
+  run-tests-and-deploy-to-staging-hold-then-production:
+    jobs:
+      - start-server
+      - cypress/run:
+          name: run-component-tests
+          cypress-command: npx cypress run --component
+      - deploy-to-render-staging:
+          requires:
+            - run-component-tests
+          filters:
+            branches:
+              only: main
+      - hold:
+          # TODO: How can we provide approval for the hold job?
+          type: approval
+          requires:
+            - deploy-to-render-staging
+      - deploy-to-render-production:
+          # TODO: Why can we specify that the only requirement for this job is the hold job?
+          requires:
+            - hold
+          filters:
+            branches:
+              only: main
